attempt to fix mobile spacing issue on reset

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body, html {
 }
 
 #reset {
-  width: 300px;
+  width: 400px;
 }
 
 .LButton {
